[FEAT] #7: 전체 수업 조회 시 필터링 코드 추가